--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
 	background-repeat: no-repeat;
 	background-position: fixed;
 	font-family: "Verdna", sans-serif;
+	margin: 0;
+	padding: 1px;
 }
 
 #container{
@@ -24,7 +26,6 @@ body{
 #header{
 	text-align: center;
 	font-size: 32px;
-	opacity: 0.9;
 	font-weight: 900;
 }
 
