--- a/style.css
+++ b/style.css
@@ -4,29 +4,38 @@ body{
 	color: white;
 	width: 100%;
 	height: 100%;
-	background-repeat: no-repeat;
 	background-position: fixed;
 	font-family: "Verdna", sans-serif;
 	margin: 0;
 	padding: 1px;
 }
 
-#container{
-	background-color: grey;
-	padding: 8px;
+#container,#clock{
+	background-color: #a8a8a8;
+	padding: 5px;
 	border-radius:18px;
 	border: none;
 	margin: 10px;
 	text-align: center;
-	opacity: 0.9;
+	opacity: 0.8;
 	font-size:28px;
 	font-weight: 300;
 }
 
-#header{
+#clock{
+	margin: 0;
+	border-radius: 0 0 18px 18px;
+	font-style: oblique;
+}
+
+#header,#clockhd{
 	text-align: center;
 	font-size: 32px;
 	font-weight: 900;
+}
+
+#clockhd{
+	font-size: 46px;
 }
 
 #subhead{
@@ -37,11 +46,11 @@ body{
 #relaycont{
 	display: inline-block;
 	text-align: center;
-	width: auto;
-	height: auto;
+	width: 225px;
+	height: 115px;
 	margin: 0;
-	margin-left: 55px;
-	margin-right: 55px;
+	margin-left: 60px;
+	margin-right: 60px;
 }
 
 .btn,.btn2{
